style.css
@import url('https://fonts.googleapis.com/css?family=Didact+Gothic');

body {
  font-family: 'Didact Gothic', sans-serif;
  height: 100vh;
  background: #333 url('image.jpg') no-repeat center center / cover;
  color: #333;
  overflow: hidden;
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;
  padding: 0 3rem;
}

h1,
h2 {
  font-weight: 200;
  margin: 0.4rem;
}

h1 {
  font-size: 3.5rem;
}

h2 {
  font-size: 2rem;
  color: #444;
}

/* Курсор */
.txt-type > .txt {
  border-right: 0.2px solid #777;
}

@media (max-width: 1200px) {
  h1 {
    font-size: 3rem;
    color: #333;
  }
}

@media (max-width: 900px) {
  .container {
    padding: 0 1rem;
  }

  h1 {
    font-size: 3rem;
    color: #333;
  }
}

@media (max-width: 500px) {
  h1 {
    font-size: 2.5rem;
    text-align: center;
    color: #333;
  }

  h2 {
    font-size: 1.5rem;
    text-align: center;
    color: #444;
  }
}

